--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,6 +14,7 @@
         app:title="@string/profile" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
